Fixing larger size alignment.

--- a/src/components/Leaderboard.scss
+++ b/src/components/Leaderboard.scss
@@ -4,26 +4,27 @@
 	background: #eee;
 	padding: 0.5em 1em;
 	box-shadow: $box-shadow;
+	margin-left: auto;
+	margin-right: auto;
+	width: 16em;
 }
 
 .row {
-	display: block;
+	display: flex;
+	flex-direction: row;
 	margin-bottom: 0.5em;
 }
 
 .rank {
-	display: inline-block;
 	width: 3em;
 }
 
 .player {
-	display: inline-block;
 	width: 8em;
 }
 
 .score {
 	color: green;
-	display: inline-block;
 	text-align: right;
 	width: 3em;
 }
