--- a/src/components/PeriodNavigator.scss
+++ b/src/components/PeriodNavigator.scss
@@ -1,12 +1,12 @@
 @import "../variables";
 
 .root {
-	display: block;
+	display: flex;
+	flex-direction: row;
 	margin-bottom: 1em;
 }
 
 .button {
-	display: inline-block;
 	border: 0;
 	background-color: #f8f8f8;
 	box-shadow: $box-shadow;
@@ -19,9 +19,9 @@
 }
 
 .period {
-	width: 12em;
 	text-align: center;
-	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
 	span {
 		font-size: 1.5em;
 	}
