--- a/src/components/PeriodRank.scss
+++ b/src/components/PeriodRank.scss
@@ -1,7 +1,8 @@
 @import "../variables";
 
 .root {
-	display: block;
+	display: flex;
+	flex-direction: row;
 	margin-bottom: 0.5em;
 	background-color: #f8f8f8;
 	box-shadow: $box-shadow;
@@ -10,13 +11,11 @@
 }
 
 .period {
-	width: 8em;
-	display: inline-block;
+	margin-right: auto;
 }
 
 .score {
 	width: 3em;
-	display: inline-block;
 	text-align: right;
 	color: green;
 }
@@ -27,6 +26,5 @@
 
 .rank {
 	width: 3em;
-	display: inline-block;
 	text-align: right;
 }
